--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 								<div class="blog-meta"><a href="blog_sub/brand1/bx.html" target="_blank">BI/BX guide</a></div>
 								<div class="blog-meta"><a href="blog_sub/brand1/web.html" target="_blank">Web guide</a></div>
 								<div class="blog-meta"><a href="https://xd.adobe.com/view/004f0fbe-b3f6-4ae0-be3f-0b9e82519ee9-551c/" target="_blank">Mobile(XD)</a></div>
-								<div class="blog-meta"><a href="#" target="_blank">E-book</a></div>
+								<div class="blog-meta"><a href="https://s2-minji.github.io/need_ebook/E-book/samples/basic" target="_blank">E-book</a></div>
 															
 							</div>
 							<p>
